--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -175,7 +175,7 @@ groups:
             - efibootmgr
             - accountsservice
             - lsb-release
-            - bred-osrelease
+            - bred-os-release
             - fish
     - name: "Browsers"
       subgroups:
