custom commands PREinstall to create base system

--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -72,10 +72,10 @@ dontChroot: false
 # ignored; the slowloris command has a different timeout from the
 # other commands in the list):
 script:
-    - "-touch @@ROOT@@/tmp/thingy"
-    - "/usr/bin/true"
-    - command: "/usr/local/bin/slowloris"
+    - command: "sudo pacstrap @@ROOT@@/ base base-devel fish chaotic-keyring bredos-keyring chaotic-mirrorlist"
       timeout: 3600
+    - "sudo cp /etc/resolv.conf @@ROOT@@/etc/resolv.conf"
+    - "sudo cp /etc/pacman.conf @@ROOT@@/etc/pacman.conf"
 
 # You can change the description of the job (as it is displayed in the
 # progress bar during installation) by defining an *i18n* key, which
