--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -177,24 +177,6 @@ groups:
             - lsb-release
             - bred-os-release
             - fish
-    - name: "Browsers"
-      subgroups:
-        - name: "Chromium - a browser by Google."
-          selected: false
-          subgroups:
-            - name: bogus
-              hidden: true
-              selected: true
-              packages:
-                - chromium
-        - name: "Mozilla Firefox"
-          selected: true
-          subgroups:
-            - name: bogus
-              hidden: true
-              selected: true
-              packages:
-                - firefox
     - name: "Desktops"
       selected: false
       subgroups:
@@ -308,6 +290,11 @@ groups:
                   - xdg-user-dirs-gtk
                   - mint-x-icons
                   - mint-y-icons
+              - name: "Theming for cinnamon"
+                hidden: true
+                selected: false
+                packages:
+                  - bred-skel-default
         - name: "LXQT-Desktop"
           description: "The Lightweight Qt Desktop Environment."
           hidden: false
@@ -375,6 +362,24 @@ groups:
                   - xfce4-weather-plugin
                   - xfce4-whiskermenu-plugin
                   - xfce4-xkb-plugin
+    - name: "Browsers"
+      subgroups:
+        - name: "Chromium - a browser by Google."
+          selected: false
+          subgroups:
+            - name: bogus
+              hidden: true
+              selected: true
+              packages:
+                - chromium
+        - name: "Mozilla Firefox"
+          selected: true
+          subgroups:
+            - name: bogus
+              hidden: true
+              selected: true
+              packages:
+                - firefox
     - name: "Drivers"
       selected: false
       critical: true
