--- a/src/modules/shellprocess/shellprocess.conf
+++ b/src/modules/shellprocess/shellprocess.conf
@@ -50,7 +50,7 @@
 # To change the description of the job, set the *name* entries in *i18n*.
 ---
 # Set to true to run in host, rather than target system
-dontChroot: false
+dontChroot: true
 # Tune this for the commands you're actually running
 # timeout: 10
 
